Fix SVG not showing on chrome

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@
   --pad-sm: calc(1vw + 0.25rem);
 }
 
+svg:not(:root) {
+  height: 100%;
+  width: 100%;
+}
+
 /* Resets */
 * {
   margin: 0;
